fix: letter-spacing, speed

--- a/components/SmolBanner/SmolBanner.module.css
+++ b/components/SmolBanner/SmolBanner.module.css
@@ -15,6 +15,6 @@
 }
 
 .text {
-  letter-spacing: 0.1em;
+  letter-spacing: 0.05rem;
   margin-right: 4rem;
 }
